# lgtmoon-rs

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.github/: renovate.global.json
.github/workflows/: deploy-preview.yml  deploy-prod.yml  deploy.yml  playwright.yml  renovate.yml
lgtmoon-core/: Cargo.toml
lgtmoon-core/src/: lib.rs  main.rs
lgtmoon-wasm/: Cargo.toml
lgtmoon-wasm/src/: lib.rs
web-app/: .prettierrc  README.md  biome.json  components.json  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.cts  tailwind.config.mts  tailwind.config.ts  tsconfig.json
web-app/drizzle/: 0001_amazing_miek.sql  0002_aberrant_enchantress.sql  0003_cooing_warstar.sql
web-app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
web-app/e2e/: image.spec.ts
web-app/public/pkg/: lgtmoon_wasm_bg.wasm
web-app/src/actions/: delete-image.ts  list-images.ts  upload-image.ts
web-app/src/app/: config.ts  globals.css  layout.tsx  middleware.ts  not-found.tsx  page.tsx  provider.tsx
web-app/src/components/: ImageCover.tsx  ImageForm.tsx  adder.tsx  form.tsx  imageForm.tsx  simple-canvas.tsx
web-app/src/config/: env.ts  server-env.ts
web-app/src/db/: schema.ts
web-app/src/hooks/: use-keep-until-on-pointer-leave.ts  use-lgtmoon.ts  use-pload-from-clipboard.ts  use-upload-from-clipboard.ts  useKeepUntilOnPointerLeave.ts  (+1 more)
(+67 files in other folders)
