[package]
name = "lgtmoon-wasm"
version = "0.1.0"
authors = ["shusann@example.com"]
description = "LGTMoon WASM"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lgtmoon-core = { path = "../lgtmoon-core" }
web-sys = { version = "0.3.77", features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Blob",
] }
image = "0.25.5"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "=0.3.55"
